<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Elecaccount!</string>
    <string name="app_name">Elecaccount</string>
    <string name="tab1">Values for Tab1</string>
    <string name="tab2">Values for Tab2</string>
    <string name="tab3">Values for Tab3</string>
    <string name="add_consume_record">添加消费</string>
    <string name="del_consume_record">删除消费</string>
    <string name="add_category">添加类别</string>
    <string name="del_category">删除类别</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="about_de">电子会计 - Elecaccount 版本：1.0</string>
    
    <!-- Strings for add consume record -->
    <string name="add_conlabel_name">名称：</string>
    <string name="add_conlabel_cate">类别：</string>
    <string name="add_conlabel_cate_pro"> - 选择类别 - </string>
    <string name="add_conlabel_date">日期：</string>
    <string name="add_conlabel_price">价格：</string>
    <string name="add_conlabel_quntity">小计：</string>
    <string name="add_conlabel_comments">备注：</string>
    <string name="add_con_rec_success">添加消费记录成功！</string>
    
</resources>
